--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.14.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
