--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.14.1",
     "web-vitals": "^4.2.4"
   },
