--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.0.2",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
