--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.0.2",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.28.0",
